# Wardenx-core

./: .env  Cargo.toml  README.md  dev44.db3
src/: database.rs  encrypt.rs  lib.rs  main.rs
src/password/: generator.rs  manager.rs
src/profile/: history.rs  user.rs
