[package]
name = "wardenx-core"
version = "0.1.6"
edition = "2021"
description = "wardenx-core core system and functionalities"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cuid2 = "0.1.2"
rusqlite = { version = "0.29.0", features = ["bundled"] } 

chrono = "0.4.31"
rand = "0.8"

digest = "0.9"
sha2 = "0.9"
df1t-cyph = "0.2.1"

